--- a/calculator.html
+++ b/calculator.html
@@ -5,6 +5,6 @@
     <title></title>
   </head>
   <body>
-    <script type="text/javascript" src="script.js"></script>
+    <script type="text/javascript" src="script3.js"></script>
   </body>
 </html>
